--- a/InvertedPendulum/LAFEM_Exp3.org
+++ b/InvertedPendulum/LAFEM_Exp3.org
@@ -12,7 +12,7 @@
   Il y a beaucoup de code commun avec la [[file:LAFEM_Exp2.org][seconde expérience]], on reprend notamment certains targets du Makefile.
 
   L'expérience se déroule comme suit :
-  - [X] Créer une base de données $D_0$ de transitions aléatoires.
+  - [ ] Créer une base de données $D_0$ de transitions aléatoires.
   - [ ] Entraîner un expert en utilisant LSPI nourri avec ces transitions ($\pi_E : S\rightarrow A$)
   - [ ] Vérifier que l'expert est en mesure de balancer le pendule durant 3000 pas de temps
   - [ ] Créer une base de données $D_E$ de transitions de l'expert. L'expérience sur LSTD$\mu$ a prouvé qu'une seule trajectoire était suffisante. On en prend une dizaine pour être sûrs.
@@ -21,7 +21,7 @@
   - [ ] Définir $D$ à partir des transitions $D_E$ en enlevant l'état d'arrivée
   - [ ] Initialiser $\omega_0 = [-1...-1]^T$
   - [ ] Fixer $T=20$ (pifomètre)
-  - [ ] Définir $\mu_E(s,a) = E\left.\left[\sum\limits_{t=0}^\infty \gamma^t \phi(s)\right|s_0 = s, a_0 = a, \pi_E\right]$ comme étant en pratique $\hat\mu_E(s,a) = {1\over 100}\sum\limits_{i=1}^{100}\sum\limits_{t<3000}\gamma^t\phi(s)$
+  - [ ] Définir $\mu_E(s,a) = E\left.\left[\sum\limits_{t=0}^\infty \gamma^t \phi(s)\right|s_0 = s, a_0 = a, \pi_E\right]$ comme étant en pratique $\hat\mu_E(s,a) =  \omega^T_{\pi_E}\phi(s,a), \omega_{\pi_E} = LSTD\mu(D_E)$
   - [ ] Faire tourner LAFEM
   - [ ] Entrainer un agent sur le problème du pendule inversé, avec la récompense trouvée par LAFEM : définir $\pi : S\rightarrow A$
   - [ ] Regarder durant combien de pas de temps l'agent arrrive à faire tenir le pendule. Comparer à l'expert et à une politique aléatoire
