L'article klein2012 est self content

--- a/klein2012/main.tex
+++ b/klein2012/main.tex
@@ -303,7 +303,7 @@ Cette expérience a été répétée FIXME:nombre de fois, avec les résultats i
 %
 % Bibliographie
 %
-\bibliography{../../Biblio/Biblio}
+\bibliography{Biblio}
 
 \end{document}
 
